syntax = "proto3";

package qitmeer.p2p.v1;

import "github.com/Qitmeer/qng/p2p/proto/v1/gogo.proto";
import "github.com/Qitmeer/qng/p2p/proto/v1/message.proto";

message GetBlocks {
  repeated Hash locator =1 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

message DagBlocks {
  repeated Hash blocks =1 [(gogoproto.moretags) = "ssz-max:\"2000\""];
}

